--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "login": "pulumi login --local"
   },
   "devDependencies": {
-    "@types/node": "^16"
+    "@types/node": "^16",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.1",
     "@pulumi/gcp": "^6.64.0",
-    "@pulumi/pulumi": "^3.80.0"
+    "@pulumi/pulumi": "^3.80.0",
+    "dotenv": "^16.4.1"
   }
 }
